# vexor-terminal

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml  wrangler.jsonc
.agents/skills/testing-vexor-terminal/: SKILL.md
apps/chat-api/: .env.example  README.md  main.py  pyproject.toml
contracts/: .gitignore  README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/84532/: run-latest.json
contracts/broadcast/DeployRevShare.s.sol/8453/: run-1779055812907.json
contracts/script/: Deploy.s.sol  DeployRevShare.s.sol
contracts/src/: VexorGovernor.sol  VexorRevShare.sol  VexorStaking.sol  VexorToken.sol
contracts/test/: Vexor.t.sol  VexorRevShare.t.sol
functions/api/: chat.ts
programs/: Cargo.toml
programs/vexor-rev-share/: Cargo.toml
programs/vexor-rev-share/src/: lib.rs
programs/vexor-staking/: Cargo.toml
programs/vexor-staking/src/: lib.rs
programs/vexor-token/: Cargo.toml
programs/vexor-token/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/agents/[slug]/: AgentPage.tsx  page.tsx
src/app/console/: RevShareTerminal.tsx  console.module.css  page.tsx
src/app/docs/: page.tsx
src/app/docs/api/: page.tsx
src/app/docs/staking/: StakingDocs.tsx  page.tsx
src/app/governance/: Governance.tsx  page.tsx
src/app/intel/: IntelFeed.tsx  page.tsx
src/app/intel/[slug]/: IntelChart.tsx  TokenFeed.tsx  page.tsx
src/components/: About.tsx  AgentChat.tsx  Chat.tsx  Console.tsx  Docs.tsx  Footer.tsx  Hero.tsx  HeroStats.tsx  Logo.tsx  Marquee.tsx  Nav.tsx  Providers.tsx  RevShareConsole.tsx  SectionHeader.tsx  Services.tsx  Team.tsx  Token.tsx  UseCases.tsx  WalletButton.tsx
src/content/: staking-en.md  staking-id.md
src/lib/: agents.ts  contracts.ts  intel-tokens.ts  revshare.ts  solana.ts  wagmi.ts
worker/: chat.ts  index.ts  intel-token.ts  intel.ts  pool.ts  researcher.ts  rpc.ts  tsconfig.json  watchtower.ts
(+3 files in other folders)
