[project]
name = "vexor-chat-api"
version = "0.1.0"
description = "FastAPI backend for Vexor Terminal agent chat (Groq Llama 3.3 70B proxy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "groq>=0.13.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]
