[package]
name = "vexor-staking"
version = "0.1.0"
description = "VexorStaking — lock-period staking with tiered reward multipliers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vexor_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
