[package]
name = "vexor-token"
version = "0.1.0"
description = "Vexor Token ($VEXOR) — SPL token with faucet for devnet testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vexor_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
